# delicious-lotus

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  TODO.md  bughunt.md  docker-compose.yml  frontend-style-guide.md  requirements.txt  run_ai_cli.py  tasks.md  test_db_connection.py  test_real_video.py
.github/workflows/: deploy-backend.yml  pr-checks.yml  security-scan.yml  test.yml
.taskmaster/docs/: chronos-editor.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
ai/: README.md  __init__.py  cli.py  requirements.txt  setup_cli.py  test_integration_manual.py  test_simple.py
ai/core/: __init__.py  openai_client.py  replicate_client.py
ai/models/: __init__.py  brand_config.py  edit_intent.py  prompt_analysis.py  replicate_client.py  scene_decomposition.py
ai/services/: __init__.py  brand_analysis_service.py  edit_intent_classifier_service.py  micro_prompt_builder_service.py  prompt_analysis_service.py  scene_decomposition_service.py
ai/tests/: __init__.py  test_prompt_analysis.py  test_recomposition_integration.py  (+3 more)
backend/: Dockerfile.dev  README.md  init_db.py
backend-api/: .env.example  .gitignore  .pre-commit-config.yaml.disabled  Dockerfile  Dockerfile.dev  Makefile  SETUP_VIDEO_PROCESSING.md  VIDEO_PROCESSING.md  alembic.ini  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  requirements.txt
deploy/: env.dev.template  env.prod.template
docs/: DATABASE_INITIALIZATION.md  ai-backend-prd.md  ai-backend-tasks-list.md  api-specification-edited.md  api-specification.md  architecture.md  cost-tracking.md  deployment-guide.md  docker-backend.md  environment-setup.md  faq.md  ffmpeg-backend-prd.md  local-setup.md  monitoring.md  newly-unblocked-prs-plan.md  performance.md  prd-edited.md  prd-frontend.md  prd.md  prompt-best-practices.md  scaling.md  security.md  storage-architecture.md  task-list-devops.md  task-list-frontend.md  task-list.md  troubleshooting.md  user-guide.md
fastapi/: .dockerignore  Dockerfile  README.md  docker-compose.test.yml  env.example  requirements.txt
ffmpeg-backend/: .env.example  .mcp.json  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ffmpeg-backend/.github/: dependabot.yml  pull_request_template.md
ffmpeg-backend/.github/workflows/: deploy.yml
ffmpeg-backend/.taskmaster/: state.json
ffmpeg-backend/.taskmaster/docs/: ffmpeg-backend-prd.md
ffmpeg-backend/.taskmaster/reports/: task-complexity-report.json
ffmpeg-backend/.taskmaster/tasks/: tasks.json
ffmpeg-backend/migrations/versions/: 001_initial_schema.py
ffmpeg-backend/src/app/: __init__.py  config.py  config_reloader.py  dependencies.py  exceptions.py  feature_flags.py  logging_config.py  main.py
ffmpeg-backend/src/app/api/internal/: clips.py
ffmpeg-backend/src/app/api/schemas/: __init__.py  composition.py  replicate.py
ffmpeg-backend/src/app/api/v1/: __init__.py  compositions.py  config.py  health.py  jobs.py  replicate.py  websocket.py
ffmpeg-backend/src/app/middleware/: __init__.py  exception_handlers.py  internal_auth.py  logging.py  request_id.py
ffmpeg-backend/src/app/utils/: log_archiver.py
ffmpeg-backend/src/db/: session.py
ffmpeg-backend/src/db/models/: __init__.py  composition.py  job.py
ffmpeg-backend/src/services/: metrics.py
ffmpeg-backend/src/services/ffmpeg/: __init__.py  audio_mixer.py  command_builder.py  concat_builder.py  input_manager.py  normalizer.py  text_overlay.py  timeline_assembler.py  transition_processor.py
ffmpeg-backend/src/workers/: __init__.py  cleanup_handler.py  ffmpeg_pipeline.py  job_handlers.py  progress_tracker.py  redis_pool.py  retry_logic.py  s3_manager.py  worker.py
ffmpeg-backend/tests/: __init__.py  conftest.py  test_health_endpoints.py  test_internal_auth.py  test_internal_clips.py  test_metrics_middleware.py  test_worker_metrics.py
ffmpeg-backend/tests/integration/: __init__.py  test_composition_workflow.py
ffmpeg-backend/tests/load/: README.md  test_concurrent_load.py
ffmpeg-backend/tests/services/: test_callback_notifier.py  test_ffmpeg_builder.py  test_input_manager.py  test_text_overlay.py  test_thumbnail_generator.py  test_timeline_assembler.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend-app/: .env.example  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  walkthrough.md
scripts/: build-backend.sh  deploy.sh  migrate-db.sh  security-scan.sh  test-backend.sh
terraform/: .gitignore  README.md  db-init-task.json  main.tf  outputs.tf  terraform.tfvars.example  tfplan  variables.tf
(+558 files in other folders)
